# ore-cli-daemon

./: .env.example  .gitignore  Cargo.toml  README.md
src/: cloudwatch.rs  errors.rs  log.rs  main.rs  test_env.rs
