[package]
name = "ore-cli-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
daemonize = "0.5.0"
chrono = "0.4"
aws-config = "0.55.0"
aws-sdk-cloudwatch = "0.25.0"
aws-types = "0.55.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2", features = ["derive"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2.3"
which = "4.3"
thiserror = "1.0"
